<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    app:cardBackgroundColor="#FFF"
    app:cardCornerRadius="@dimen/_5sdp"
    android:layout_marginHorizontal="@dimen/_30sdp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    app:layout_constraintCircleRadius="@dimen/_2sdp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_2sdp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/txt_invitation"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSubTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/txt_are_you_sure_you_want_to_logout"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/btnBottomSection"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnBottomSection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:backgroundTint="@android:color/white"
                android:text="@string/btnCancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="@+id/buttonSave"
                app:layout_constraintEnd_toStartOf="@+id/buttonSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonSave"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@android:color/black"
                android:text="@string/btnOk"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonCancel"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>